feat(接口测试): 接口场景的表格批量操作功能开发